# lantern

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  benchmark.cc  cudaMain.cc  main.cc  mainInference.cc  plot.ipynb  script.py  torch_playground.ipynb
data/: random_arr.npy
include/: lantern.h
lantern/: helpersp.h  helperst.h  ops.cc  tensor.cc  tensor.h
lantern/csrc/: ops.cc  pylantern.py
lantern/inference/: Graph.cc  Graph.h
lantern/tensor/: Factory.cc  Factory.h  Shape.cc  Shape.h  Tensor.cc  Tensor.h  TensorBackend.h  TensorGate.h  Types.cc  Types.h  Util.cc  Util.h
lantern/tensor/accel/: RuntimeCheck.cc  RuntimeCheck.h
lantern/tensor/accel/cuda/: CUDABackend.cc  CUDABackend.cu  CUDABackend.cuh  CUDABackend.h  CUDATensor.cu  CUDATensor.h  blas.cu  blas.h  kernel.cu  kernel.cuh
lantern/tensor/accel/rawcpu/: CPUBackend.cc  CPUBackend.h  CPUTensor.cc  CPUTensor.h
model/: model.onnx
source/: helpersp.h  ops.cc  tensor.cc  tensor.h
test/: test_ops.py
